--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ a {
 }
 
 .owl-carousel .owl-stage {
-  transition-timing-function: linear; 
+  transition-timing-function: linear;
 }
 
 
@@ -305,6 +305,14 @@ p {
   flex-direction: column;
   border-radius: 3px;
   transition: transform 0.3s;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all 0.6s ease-out;
+}
+
+.is-visible {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .project-card:hover {
