--- a/style.css
+++ b/style.css
@@ -11,6 +11,33 @@ html {
   scroll-behavior: smooth;
 }
 
+.loading-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #1B262C;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; /* Assicurati che sia sopra tutto il resto */
+}
+
+.loader {
+  border: 16px solid #f3f3f3; /* Colore dello sfondo */
+  border-radius: 50%;
+  border-top: 16px solid #3498db; /* Colore blu */
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 /* Stilizzazione dell'header */
 header {
   display: flex;
