--- a/style.css
+++ b/style.css
@@ -21,13 +21,13 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999; /* Assicurati che sia sopra tutto il resto */
+  z-index: 9999; /* Posiziona l'elemento sopra tutti gli altri */
 }
 
 .loader {
-  border: 16px solid #f3f3f3; /* Colore dello sfondo */
+  border: 16px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 16px solid #3498db; /* Colore blu */
+  border-top: 16px solid #3498db;
   width: 120px;
   height: 120px;
   animation: spin 2s linear infinite;
@@ -198,15 +198,15 @@ aside img {
 }
 
 aside::before {
-  content: ""; /* Necessario per generare il pseudo-elemento */
-  position: absolute; /* Posizionamento assoluto rispetto al suo contenitore relativo */
-  top: 20px; /* Sposta leggermente verso il basso per l'effetto 3D */
-  left: 25px; /* Sposta leggermente a sinistra per l'effetto 3D */
-  width: 100%; /* Larghezza uguale all'elemento genitore */
-  height: 100%; /* Altezza uguale all'elemento genitore */
-  border: 5px solid black; /* Bordo nero per il rettangolo fittizio */
-  z-index: 1; /* Posiziona sotto l'immagine */
-  box-sizing: border-box; /* Include il bordo nel calcolo della larghezza/altezza */
+  content: "";
+  position: absolute;
+  top: 20px;
+  left: 25px;
+  width: 100%;
+  height: 100%;
+  border: 5px solid black;
+  z-index: 1;
+  box-sizing: border-box;
 }
 
 
@@ -542,12 +542,12 @@ footer {
 
 @media (max-width: 600px) {
   .technology-section {
-    padding: 10px 15px;  /* Riduci padding */
-    margin-top: 20px;    /* Riduci margine superiore se presente */
+    padding: 10px 15px;
+    margin-top: 20px;
   }
 
   .owl-carousel {
-    margin-bottom: -200px; /* Riduci margine inferiore del carosello */
+    margin-bottom: -200px;
   }
 
   header h2 {
@@ -555,11 +555,11 @@ footer {
   }
 
   .nav-links a {
-    font-size: 12px; /* Riduci la dimensione del testo nei link per risparmiare spazio */
+    font-size: 12px;
   }
 
   .profile-content {
-    align-items: center; /* Centra verticalmente i contenuti nella sezione */
+    align-items: center;
   }
 
   .text-content {
@@ -570,12 +570,12 @@ footer {
   }
 
   button {
-    margin: 20px auto; /* Centra il bottone e aggiungi margine per spazio */
+    margin: 20px auto;
     display: block;
   }
 
   .profile-section {
-    margin-bottom: -200px; /* Riduci il padding superiore per spazio */
+    margin-bottom: -200px;
     margin-top: -200px;
   }
 }
@@ -589,7 +589,7 @@ footer {
   justify-content: center;
   align-items: center;
   min-height: 80vh;
-  padding-top: 150px; /* Adjust depending on your header */
+  padding-top: 150px;
   text-align: center;
   background: linear-gradient(to bottom, #012a4a, #013a63, #01497c, #014f86, #2a6f97);
   color: #ffffff;
